<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sp_white_rounded_selector"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTitleOCamera"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Upload_Photo"
            android:textSize="@dimen/txt_size_for_content"
            android:textColor="@color/eTxtColor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30888888" />

        <TextView
            android:id="@+id/txtUseCamera"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Use_Camera"
            android:textSize="@dimen/t_headertextsize"
            android:textColor="#000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30888888" />

        <TextView
            android:id="@+id/txtUseExistPhoto"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/Use_Existing_Photos"
           android:textColor="#000000" 
            android:textSize="@dimen/t_headertextsize" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtUploadPhotoCancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/sp_white_rounded_selector"
        android:gravity="center"
        android:text="@string/Cancel"
         android:textColor="@color/eTxtColor"
        android:textSize="@dimen/t_headertextsize" />

</LinearLayout>