<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/peach_color"
        android:text="@string/rate_your_friend"
        android:gravity="center"
        android:textSize="@dimen/txt_size_16sp"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"/>



    <ListView
        android:id="@+id/listView_invite"
        android:layout_above="@+id/rl_apply_cancel"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/list_margin"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:scrollingCache="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/deviderHeigh_my_share"
        android:fadeScrollbars="true"
        android:smoothScrollbar="true"/>


    <RelativeLayout
        android:id="@+id/rl_apply_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/rl_apply_cancel_padding"
        android:paddingRight="@dimen/rl_apply_cancel_padding"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/component_hight"
            android:text="@string/later"
            android:gravity="center"
            android:textSize="@dimen/text_apply_cancel_size"
            android:layout_alignParentLeft="true"
            android:textColor="@color/home_btn_txt_color"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/component_hight"
            android:text="@string/Cancel"
            android:gravity="center"
            android:textSize="@dimen/text_apply_cancel_size"
            android:layout_alignParentRight="true"
            android:textColor="@color/home_btn_txt_color"
            />

    </RelativeLayout>
</RelativeLayout>
