<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
     >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

             >
            <ImageView
                android:id="@+id/imgBackAuth"
                android:layout_width="@dimen/header_height"
                android:layout_height="@dimen/header_height"
                android:background="@drawable/selector_button_back"
                android:clickable="true"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/btn_padding"
                android:src="@drawable/spl_ic_back_w_l" />
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_below="@+id/imgBackAuth"
                android:layout_above="@+id/linearAuth"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgAuthLogo"
                    android:layout_width="@dimen/logo_w"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="@dimen/logo_maring_minus_10"
                    android:src="@drawable/logo"
                    />
                </RelativeLayout>

<LinearLayout
    android:id="@+id/linearAuth"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
   android:layout_centerInParent="true"
    android:padding="@dimen/activity_layout_padding"
    android:orientation="vertical">


    <EditText
        android:id="@+id/eTxtAuthCode"
        style="@style/font_login_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_h"
        android:background="@android:color/white"
        android:gravity="center"
        android:hint="@string/enter_auth_code"

        android:padding="@dimen/eTextLEmail_padding"
        android:textColor="@color/eTxtColor"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnActAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/activate_my_account"
        android:textColor="@color/home_btn_txt_color"
        android:background="@drawable/btn_login_selector"
        android:layout_marginTop="@dimen/LogoMargin"
        android:textSize="@dimen/login_txt_size" />

    <Button
        android:id="@+id/btResendPin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/LogoMargin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/resend_pin"
        android:textColor="@color/home_btn_txt_color"
        android:textSize="@dimen/login_txt_size" />
</LinearLayout>
</RelativeLayout>
    </ScrollView>
</RelativeLayout>
</RelativeLayout>